# Revenant-C2

./: .gitignore  README.md  c2.py  console.py
Ghost-Implant/: Cargo.toml
Ghost-Implant/src/: main.rs
Ghost-Implant/src/comms/: mod.rs
Ghost-Implant/src/encryption/: mod.rs
Ghost-Implant/src/utils/: mod.rs
src/cmd2_plugins/: clients_plugin.py  commands_plugin.py  connections_plugin.py  file_manage_plugin.py  generate_plugin.py
src/crypto/: ecdh.py  example_client.py  example_server.py  test.py
src/payload_templates/: generate_python_payload.py  python_callback.py
