[package]
name = "Ghost-Implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = 'abort'
opt-level = "z"
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
gethostname = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rust-crypto = "0.2.36"
sodiumoxide = "0.2.7"
base64 = "0.13.0"
fork = "0.1.7"